--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,201 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	  border: solid black 1px;    
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+ * {
+	box-sizing: border-box; 
+	
+}
+.body1 {
+    margin: 5%;
+    /* margin-top: 10%;
+    margin-bottom: 10%; */
+
+}
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+  .links1{
+     letter-spacing: 8px;
+    
+  }
+  
+  div #innovation { 
+	font-size: 70px;
+  }
+   .topnav {
+    
+	display:flex;
+	justify-content: space-around;
+}
+
+  /* section1.topnav{
+	width: 25%;
+	display:flex;
+	justify-content: center;
+  } */
+  
+  section1 .logo {
+	width: 25%;
+
+  }
+   
+  .center {
+   width:100%;
+	display:flex;
+	justify-content:space-around;
+    align-items: center; 
+    margin-top: 5%;
+    margin-bottom: 5%;
+	
+  }
+  
+  .container-half {
+	
+	margin: 10%;
+  }
+  .container-half2 {
+	  margin: 10%;
+  }
+  .middle-img {
+	  width: 100%;
+	  margin: center;
+	  padding: 5%;
+  }
+  .button {
+      border: solid black 1px;
+      padding: 2%;
+      height: 25%;
+  }
+
+  footer {
+      margin-top: 5%;
+      text-align: left;
+      letter-spacing: 5px;
+  }
+  
+  .copy {
+	text-align: center;
+	margin: 20%;
+  }
+/* coding for tablet view */
+
+@media screen and (max-width: 800px) {
+    .topnav {
+        display: flex;
+         flex-direction: column-reverse;
+    
+    }
+    .logo {
+        width: 25%;
+        align-self: center;
+        padding: 3%;
+        
+    }
+    .firstImg {
+        display: none;
+    }
+    .containerhalf {
+        text-align: center;
+    }
+}
+
+
+/* code for mobile view */
+@media screen and (max-width: 500px) {
+    .topnav {
+        display: flex;
+         flex-direction: column-reverse;
+        
+    }
+    .links1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: solid black 1px;
+        padding: 5%;
+    }
+    
+    }
+    .center {
+        width:100%;
+         display:flex;
+         flex-direction: column;
+         justify-content:space-around;
+         align-items: center; 
+         margin-top: 5%;
+         margin-bottom: 5%;
+    }
+    #features {
+        padding:5%;
+    }
+    #about {
+        padding:5%;
+    }
+   #Services {
+        padding:5%;
+    }
+   #product {
+        padding:5%;
+    }
+   #vision {
+        padding:5%;
+    }
+}
